--- a/src/style.css
+++ b/src/style.css
@@ -12,38 +12,25 @@ body {
   width: 250px;
   border-radius: 5px;
   position: relative;
-  &:before {
-    position: absolute;
-    top: 20px;
-    left: 20px;
-    font-size: 80px;
-  }
-  &:after {
-    position: absolute;
-    bottom: 20px;
-    right: 20px;
-    font-size: 80px;
-  }
 }
-&.♠:before,
-&.♠:after {
-  content: "♠";
+.top-suit {
+  position: absolute;
+  top: 10px;
+  left: 20px;
+  font-size: 80px;
 }
-&.♦:before,
-&.♦:after {
-  content: "♦";
+.number{
+  position: absolute;
+  font-size: 80px;
+  top: 35%;
+  align-items: center;
+  left: 90px;
 }
-&.♥:before,
-&.♥:after {
-  content: "♥";
-  color: red;
-}
-&.♣:before,
-&.♣:after {
-  content: "♣";
-  color: red;
-}
+
 .bottom-suit {
+  position: absolute;
   transform: rotate(180deg);
   display: inline-block;
+  bottom: 0;
+  right: 10px;
 }
